<resources>
    <string name="app_name">tugasAKhir</string>
    <string name="selamatDatang">Selamat datang di Krislam Cafe!</string>
    <string name="deskOnboarding2">Temukan beragam hidangan lezat dan kenyamanan dalam genggaman Anda dengan KrislamMenu! Nikmati juga berbagai diskon eksklusif yang membuat pengalaman kuliner Anda semakin memuaskan.</string>
    <string name="lewati">Lewati</string>
    <string name="berikutnya">Berikutnya</string>
    <string name="judulOnboarding3">Jelajahi Menu Krislam dengan Mudah</string>
    <string name="deskOnboarding3">Nikmati kemudahan menjelajahi menu Krislam dan pilihlah hidangan favorit Anda, termasuk menu best seller/rekomendasi dari cafe kami, dengan KrislamMenu. Mulai petualangan kuliner Anda sekarang!</string>
    <string name="judulOnboarding4">Hemat Lebih Banyak dengan KrislamMenu!</string>
    <string name="deskOnboarding4">Nikmati Diskon Lebih Banyak di KrislamMenu! Temukan penawaran istimewa dan diskon eksklusif saat Anda jelajahi KrislamMenu. Mulai hemat dan puaskan selera Anda sekarang!</string>
    <string name="button_mulai">Mulai Sekarang!</string>
    <string name="judulLogin">Masuk</string>
    <string name="deskLogin">Selamat Datang di KrislamMenu, Untuk masuk silahkan isi data kamu terlebih dahulu ya!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupaKataSandi">Lupa Kata Sandi?</string>
    <string name="belumPunyaAkun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daftar_">Daftar</string>
    <string name="selamat_datang_di_aplikasi_krislammenu_untuk_masuk_silahkan_daftar_dan_mengisi_data_kamu_terlebih_dahulu_ya">Selamat Datang di Aplikasi KrislamMenu, Untuk Masuk silahkan Daftar dan mengisi data kamu terlebih dahulu ya!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_">Password</string>
    <string name="email_">Email</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk">Masuk</string>
    <string name="daftar_text">Daftar</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="halo_siapa_namamu">Halo, Siapa namamu?</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="berapa_nomor_ponselmu">Berapa nomor ponselmu?</string>
    <string name="nomor_ponsel">Nomor Ponsel</string>
    <string name="apa_jenis_kelaminmu">Apa jenis kelaminmu?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="privasi">Privasi</string>
    <string name="paket_komplit">Paket Komplit</string>
    <string name="makanan">Makanan</string>
    <string name="minuman">Minuman</string>
    <string name="cemilan">Cemilan</string>
    <string name="jumlah">Jumlah</string>
    <string name="catatan">Catatan</string>
    <string name="masukanKeranjang">Masukan Keranjang</string>
    <string name="pajak">Pajak</string>
    <string name="diskon">Diskon</string>
    <string name="id">ID CDAAPTNIA</string>
    <string name="totalHarga">Total Harga</string>
    <string name="detailpesanan">Detail Pesanan</string>
    <string name="checkout">Checkout</string>
    <string name="kentang_goreng">Kentang Goreng</string>
    <string name="digoreng_dadakan">digoreng dadakan</string>
    <string name="total_rp_12_000">Total Rp. 12.000</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="dingin">Dingin</string>
    <string name="total_rp_17_000">Total Rp. 17.000</string>
    <string name="rp_10_000">Rp 10.000</string>
    <string name="rp1_500">Rp1.500</string>
    <string name="rp_0">Rp 0</string>
    <string name="rp_11_500">Rp 11.500</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="yuk_pilih_cara_bayar_yang_kamu_mau">Yuk pilih cara bayar yang kamu mau</string>
    <string name="total_biaya">Total Biaya</string>
    <string name="rp_20000">Rp.20000</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
</resources>