<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="291dp"
        android:background="@drawable/background_detail_pemesanan"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_metode_pembayaran"
                android:layout_width="1dp"
                android:layout_height="97dp"
                android:layout_weight="1"
                android:src="@drawable/bobaredvelvetdrink" />

            <LinearLayout
                android:layout_width="116dp"
                android:layout_height="77dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/judulPesanan_metpem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/red_velvet"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/desk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dingin"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/harga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_10_000"
                    android:textSize="19dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#D8D8D8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_detailpesanan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailpesanan"
                android:textSize="19dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/judulPesanan1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/red_velvet" />

                <TextView
                    android:id="@+id/harga1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/rp_10_000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pajak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pajak" />

                <TextView
                    android:id="@+id/hargaPajak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/rp1_500" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/id"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/diskon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/diskon" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/rp_0" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#D8D8D8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/totalHarga"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/rp_11_500"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="418dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_Metode_Pembayaran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/metode_pembayaran"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yuk_pilih_cara_bayar_yang_kamu_mau" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_gravity="center"
                android:background="#CCE7FF"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="170dp"
                    android:layout_height="48dp"
                    app:srcCompat="@drawable/image_button_wallet"
                    android:contentDescription="TODO" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/image_button_bank"
                    android:contentDescription="TODO" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:srcCompat="@drawable/gopay" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                app:srcCompat="@drawable/ovo" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                app:srcCompat="@drawable/dana" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_Total_Biaya"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_biaya"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rp_20000"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/ButtonBayar"
                    android:layout_width="196dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:backgroundTint="#0085FF"
                    android:layout_gravity="center"
                    android:text="@string/bayar_sekarang" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>