<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout_page_3"
        android:layout_width="302dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129"
        tools:layout_editor_absoluteX="54dp">


        <TextView
            android:id="@+id/textView_page3_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_stepper_2"
            android:gravity="center"
            android:text="@string/_1"
            android:textColor="#2B99FF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView_page3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/line" />

        <TextView
            android:id="@+id/textView_page3_2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/circle_stepper_2"
            android:gravity="center"
            android:text="@string/_2"
            android:textColor="#2B99FF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView_page3_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/line" />

        <TextView
            android:id="@+id/textView_page3_3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_stepper_1"
            android:gravity="center"
            android:text="@string/_3"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_page_2"
        android:layout_width="408dp"
        android:layout_height="192dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_page_3"
        app:layout_constraintVertical_bias="0.089">

        <TextView
            android:id="@+id/text_page_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/apa_jenis_kelaminmu"
            android:textSize="24sp" />


        <Button
            android:id="@+id/button_selanjutnya_3"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="388dp"
            android:backgroundTint="#0085FF"
            android:padding="5dp"
            android:text="@string/selanjutnya" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>