<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_lewati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_lewati_onboarding2"
        android:text="@string/lewati"
        android:textColor="@color/cyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="411dp"
        android:layout_height="375dp"
        android:src="@drawable/ilustrasi_onboarding3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/selamatDatang"
        android:layout_width="278dp"
        android:layout_height="116dp"
        android:gravity="center"
        android:text="@string/judulOnboarding3"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/logoImageView"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/logoImageView"
        app:layout_constraintTop_toTopOf="@+id/logoImageView"
        app:layout_constraintVertical_bias="0.543" />

    <TextView
        android:id="@+id/deskOnboarding1"
        android:layout_width="277dp"
        android:layout_height="109dp"
        android:gravity="center"
        android:text="@string/deskOnboarding3"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/selamatDatang"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/selamatDatang"
        app:layout_constraintTop_toBottomOf="@+id/selamatDatang"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:src="@drawable/step_onboarding3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/selamatDatang"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="@+id/selamatDatang"
        app:layout_constraintTop_toBottomOf="@+id/selamatDatang"
        app:layout_constraintVertical_bias="0.785" />

    <Button
        android:id="@+id/buttohalaman3berikutnya"
        android:layout_width="339dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_lewati_onboarding2"
        android:text="@string/berikutnya"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step"
        app:layout_constraintVertical_bias="0.541" />

</androidx.constraintlayout.widget.ConstraintLayout>